Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -93,7 +93,6 @@ body {
         }
         ul {
             max-width: 70%;
-            float: none;
             margin-left: 4.5%;
             text-align: center;
             padding: 0;
